[Launcher][200422-1417][Notifivation][Refactor]
[What]
Change NotificationFooterLayout.java to kotlin type

--- a/res/layout/notification_content.xml
+++ b/res/layout/notification_content.xml
@@ -113,7 +113,7 @@
         android:clipChildren="false">
 
         <LinearLayout
-            android:id="@+id/icon_row"
+            android:id="@+id/iconRow"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipChildren="false"
