[Launcher][200429-2301][Notification][Refactor]
[What]
Change NotificationKeyData.java, NotificationMainView.java to kotlin type

--- a/res/layout/notification_content.xml
+++ b/res/layout/notification_content.xml
@@ -55,7 +55,7 @@
         android:focusable="true" >
 
         <LinearLayout
-            android:id="@+id/text_and_background"
+            android:id="@+id/textAndBackground"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="?attr/popupColorPrimary"
@@ -87,7 +87,7 @@
         </LinearLayout>
 
         <View
-            android:id="@+id/popup_item_icon"
+            android:id="@+id/popupItemIcon"
             android:layout_width="@dimen/notification_icon_size"
             android:layout_height="@dimen/notification_icon_size"
             android:layout_gravity="center_vertical|end"
